--- a/src/gatsby-theme-musician/config/artist.yml
+++ b/src/gatsby-theme-musician/config/artist.yml
@@ -1,6 +1,6 @@
 artist:
-  name: Your Awesome Band
-  tagline: Short information about your group, new album, etc
+  name: Cowboy General
+  tagline: Fictional Western Rap band headquartered in Atlanta, GA
   # seo_title:
   # seo_description:
   # contact_twitter_username:
