--- a/src/gatsby-theme-musician/config/artist.yml
+++ b/src/gatsby-theme-musician/config/artist.yml
@@ -9,9 +9,9 @@ artist:
 
 social:
   - name: Facebook
-    url: https://facebook.com
+    url: https://www.facebook.com/CareyHoodPhotos/
   - name: Instagram
-    url: https://instagram.com
+    url: https://www.instagram.com/careyhood/
   - name: Twitter
     url: https://twitter.com
   - name: Youtube
